--- a/app/locales/fr.yml
+++ b/app/locales/fr.yml
@@ -462,6 +462,7 @@ TYPE_LISTE: 'Type de liste'
 TYPE_LISTE_GLOBAL: 'Type de liste global'
 UTILISATEUR_3_CHAR_ERREUR: 'Choisissez un nom d''utilisateur d''au moins 3 caractères.'
 UTILISATEUR_EXISTANT: 'Ce nom d''utilisateur est déjà utilisé !'
+UTILISATEUR_INVALIDE: 'Utilisateur invalide'
 UTILISATEUR_VALIDE: 'Utilisateur valide'
 UTILISATEURS_INSCRITS: 'utilisateurs sont inscrits<br />sur DucksManager'
 VALIDER: 'Valider'
