--- a/app/locales/fr.yml
+++ b/app/locales/fr.yml
@@ -10,6 +10,7 @@ EMAIL_EDGES_PUBLISHED_SUBJECT: 'Vos tranches ont été publiées sur DucksManage
 EMAIL_HELLO: 'Bonjour %userName%,'
 EMAIL_ONE_EDGE_PUBLISHED_INTRO: 'La tranche dont vous nous avez envoyé la photo est maintenant visionnable dans votre bibliothèque DucksManager ainsi que dans les bibliothèques des autres utilisateurs possédant ce magazine.'
 EMAIL_ONE_EDGE_PUBLISHED_SUBJECT: 'Votre tranche a été publiée sur DucksManager !'
+EMAIL_SIGNATURE: 'A bientôt sur le site !<br />L''équipe DucksManager'
 MOT_DE_PASSE_6_CHAR_ERREUR: 'Le mot de passe doit comporter au moins 6 caractères !'
 MOTS_DE_PASSE_DIFFERENTS: 'Les deux mots de passe ne correspondent pas !'
 UTILISATEUR_3_CHAR_ERREUR: 'Choisissez un nom d''utilisateur d''au moins 3 caractères.'
