--- a/app/locales/fr.yml
+++ b/app/locales/fr.yml
@@ -11,6 +11,9 @@ EMAIL_HELLO: 'Bonjour %userName%,'
 EMAIL_ONE_EDGE_PUBLISHED_INTRO: 'La tranche dont vous nous avez envoyé la photo est maintenant visionnable dans votre bibliothèque DucksManager ainsi que dans les bibliothèques des autres utilisateurs possédant ce magazine.'
 EMAIL_ONE_EDGE_PUBLISHED_SUBJECT: 'Votre tranche a été publiée sur DucksManager !'
 EMAIL_SIGNATURE: 'A bientôt sur le site !<br />L''équipe DucksManager'
+MEDAL_1: 'Débutant'
+MEDAL_2: 'Intermédiaire'
+MEDAL_3: 'Expert'
 MOT_DE_PASSE_6_CHAR_ERREUR: 'Le mot de passe doit comporter au moins 6 caractères !'
 MOTS_DE_PASSE_DIFFERENTS: 'Les deux mots de passe ne correspondent pas !'
 UTILISATEUR_3_CHAR_ERREUR: 'Choisissez un nom d''utilisateur d''au moins 3 caractères.'
