--- a/app/locales/fr.yml
+++ b/app/locales/fr.yml
@@ -10,6 +10,9 @@ EMAIL_EDGES_PUBLISHED_SUBJECT: 'Vos tranches ont été publiées sur DucksManage
 EMAIL_HELLO: 'Bonjour %userName%,'
 EMAIL_ONE_EDGE_PUBLISHED_INTRO: 'La tranche dont vous nous avez envoyé la photo est maintenant visionnable dans votre bibliothèque DucksManager ainsi que dans les bibliothèques des autres utilisateurs possédant ce magazine.'
 EMAIL_ONE_EDGE_PUBLISHED_SUBJECT: 'Votre tranche a été publiée sur DucksManager !'
+EMAIL_RESET_PASSWORD_SUBJECT: 'Vous avez oublié votre mot de passe sur DucksManager ?'
+EMAIL_RESET_PASSWORD_BODY: 'Un visiteur a indiqué avoir oublié le mot de passe associé à l''adresse e-mail %email%.<br />Si c''est vous qui en êtes à l''origine, cliquez sur le lien suivante pour indiquer un nouveau mot de passe pour votre compte DucksManager :'
+EMAIL_RESET_PASSWORD_LINK_TEXT: 'Mettre à jour mon mot de passe'
 EMAIL_SIGNATURE: 'A bientôt sur le site !<br />L''équipe DucksManager'
 MEDAL_1: 'Débutant'
 MEDAL_2: 'Intermédiaire'
