--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -19,6 +19,8 @@ EMAIL_RESET_PASSWORD_BODY: >-
 EMAIL_RESET_PASSWORD_LINK_TEXT: Mettre à jour mon mot de passe
 EMAIL_SIGNATURE: A bientôt sur le site !<br />L'équipe DucksManager
 EMAIL_SOCIAL_NETWORKS: 'Retrouvez-nous sur les réseaux sociaux :'
+EMAIL_SUBSCRIPTION_ISSUE_ADDED: '%publicationName% %issueNumber% a été ajouté à votre collection !'
+EMAIL_SUBSCRIPTION_ISSUE_ADDED_DESCRIPTION: 'Un magazine faisant partie de vos abonnements DucksManager est récemment sorti et a donc été ajouté automatiquement à votre collection : %publicationName% %issueNumber%.'
 ERROR_PURCHASE_ALREADY_EXISTS: Un achat avec cette date et cette description existe déjà !
 ERROR_PURCHASE_UPDATE_NOT_ALLOWED: Vous ne pouvez pas modifier cet achat.
 MEDAL_1: Débutant
