Allow adding a comment to an existing bookstore

--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1,6 +1,6 @@
 EMAIL_BOOKSTORE_APPROVED_INTRO: La bouquinerie que vous avez proposée est maintenant visible par tous les utilisateurs DucksManager.
 EMAIL_BOOKSTORE_APPROVED_MEDAL: Vous avez remporté la médaille "Duckhunter %medalLevel%" grâce à vos contributions !
-EMAIL_BOOKSTORE_APPROVED_SUBJECT: Votre suggestion de bouquinerie a été approuvée !
+EMAIL_BOOKSTORE_APPROVED_SUBJECT: Votre revue de bouquinerie a été approuvée !
 EMAIL_BOOKSTORE_APPROVED_THANKS: >-
   Bravo à vous et merci pour votre contribution : nous sommes heureux de vous accueillir parmi la communauté active de DucksManager !
 EMAIL_EDGE_PUBLISHED_WITH_PHOTOGRAPHER_INTRO: La tranche dont vous nous avez envoyé la photo est maintenant visionnable dans votre bibliothèque DucksManager ainsi que dans les bibliothèques des autres utilisateurs possédant ce magazine.
